fix safari z-index无效

--- a/css/public.css
+++ b/css/public.css
@@ -30,6 +30,7 @@ html,body {
   left: 0;
   top: 0;
   border-radius: 4px;
+  overflow: hidden;
   box-shadow: 0 0 10px hotpink;
   -webkit-box-reflect: below 8px -webkit-linear-gradient(top, rgba(0,0,0,0) 50%, rgba(0,0,0,0.5) 100%);
 }
